# vd-proto

./: .gitignore  COLOREFFECTS_PORT.md  HYBRID_MORPH_SPEC.md  NEW_FEATURES.md  README.md  docs.html  index.html  package.json  volumetric-simulator.html
artnet/: BUILD_AND_RUN.md  CMakeLists.txt  SIMULATOR_GUIDE.md  artnet.py  artnet_bridge_config.json  artnet_bridge_server.py  artnet_web_scenes.py  build.sh  dimension_utils.py  hw_config_4.json  install_deps.sh  interactive_scene_server.py  interactive_web_scene.py  sender.py  test_dimension_issue.py  test_transform_shape.py
artnet/scenes/: interactive_scene.py
artnet/scenes/colors/: all_effects.py
artnet/scenes/colors/effects/: color_effects.py
artnet/scenes/geometry/: shapes.py  waves.py
artnet/src/artnet/: Cargo.toml  lib.rs
artnet/src/sender_monitor/: Cargo.toml  web_monitor.rs
legacy/: FRONTEND_REFACTOR_GUIDE.md  README.md  REFACTOR_COMPLETE.md  REFACTOR_PROGRESS.md  REFACTOR_SUMMARY.md
legacy/docs/: DOCS_SERVER_README.md  REFACTOR_PLAN.md
legacy/standalone-js-simulator/: README.md  index.html  package-lock.json  package.json  server.js  test-features.html  volumetric-simulator.html
legacy/test-files/: test_nonsquare_transform.py  test_orientation.py  test_orientation_detailed.py  test_square_orientation_bug.py
sender-with-planes/: sender.py  sim_config_updated_4.json
src/css/: styles.css
src/js/: VolumetricDisplay.js  VolumetricRenderer.js  main.js
td/: README.md  TOUCHDESIGNER_COLOR_EFFECTS.md  TOUCHDESIGNER_COLOR_EFFECTS_TOPS.md  TOUCHDESIGNER_ILLUSIONS.md  TOUCHDESIGNER_ILLUSIONS_SOP_POP.md  TOUCHDESIGNER_IMPLEMENTATION.md  generate_color_effects.py  generate_core_scenes.py
volumetric-display/: CHANGES.md  README.md  VolumetricDisplay.cpp  VolumetricDisplay.h  interactive_scene_server.py  interactive_web_scene.py  main.cpp  requirements.txt  sender.py  sender_monitor_rust.py  sim_config_4_hwsim.json
volumetric-display/display_config/: gapped_2_cube_config_nlk.json  hw_config_4.json  sim_config_2.json  sim_config_4_simonly.json
volumetric-display/resources/: icon_cmake.cpp
volumetric-display/scenes/: __init__.py  interactive_scene.py
volumetric-display/simulator/: DisplayConfig.h  VolumetricDisplay.cpp  VolumetricDisplay.h  build.sh  install_deps.sh  main.cpp
volumetric-display/web/: controller.css
web/: controller.css  controller.html
(+86 files in other folders)
